--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.4.2'
     compile 'io.nlopez.smartlocation:library:3.3.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation "android.arch.persistence.room:runtime:1.0.0-beta2"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
+    testImplementation "android.arch.persistence.room:testing:1.0.0-beta2"
 }
