--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.0.0-beta2"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0-beta2"
     testImplementation "android.arch.persistence.room:testing:1.0.0-beta2"
+    implementation 'com.evernote:android-job:1.2.5'
 }
